--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -21,7 +21,7 @@
     </div>
     <mat-card>
       <mat-card-header>
-        <h4 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Basic Parameters</h4>
+        <h4 style="padding-left:0px; font-size:21px; font-weight:bold; font-family: roboto, arial, sans-serif;">Basic Parameters</h4>
         <!-- <span class="example-spacer"></span> -->
         <a mat-button matTooltip="Click to load default search parameters" (click)="LoadDefaults()"
           matTooltipPosition="after" style="color:cornflowerblue; text-decoration: underline;" name="Defaults"
