--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -4,7 +4,7 @@
         document.getElementById("ResultsViewButton").disabled = false;
     }
   </script> -->
-  <div style="width:90%; min-width: 600px; margin:0 auto;">
+  <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
 
     <mat-card>
       <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Submit
