--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -392,6 +392,9 @@
               </div>
             </mat-error>
           </mat-form-field>
+          <div *ngIf="Slider_Value < 1">
+            <b style="color: red; font-size:13px; font-weight: 350; font-style: italic; text-align: left; padding-left: 5px;">Slider Value must not be less than 1</b>
+          </div>
         </mat-grid-tile>
         <mat-grid-tile></mat-grid-tile>
 
