--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -870,7 +870,7 @@
       </mat-grid-tile>
     </mat-grid-list>
 
-    <div id="PageRefresh">Once query has been submitted then, please do not refresh the page otherwise your job submission could be interupted.</div>
+    <div id="PageRefresh">Please do not refresh the page while we submit your query.</div>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
   </div>
 </form>
