--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -7,8 +7,7 @@
   <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
 
     <mat-card>
-      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Submit
-        Protein Identification Query</h4>
+      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Protein Search Query</h4>
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
     <!-- <br> -->
